--- a/KnowledgeBuilder/pom.xml
+++ b/KnowledgeBuilder/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.neo4j.driver</groupId>
+			<artifactId>neo4j-java-driver</artifactId>
+			<version>5.28.5</version>
+		</dependency>
 <!--		disabling security to check, will secure endPts afterwords-->
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
