--- a/KnowledgeBuilderService/src/main/resources/application.properties
+++ b/KnowledgeBuilderService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=KnowledgeBuilder
+
+# Neo4j connection config.
+neo4j.uri=bolt://localhost:7687
+neo4j.username=neo4j
+neo4j.password=neo4j123
