upload service feature

--- a/UploadService/src/main/resources/application.properties
+++ b/UploadService/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=UploadService
+
+# Spring file max configuration.
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#MongoDB connection config
+spring.data.mongodb.uri=mongodb://localhost:27017/fainance
+spring.data.mongodb.database=fainance
+spring.data.mongodb.username=
+spring.data.mongodb.password=
