--- a/KnowledgeBuilderService/pom.xml
+++ b/KnowledgeBuilderService/pom.xml
@@ -3,12 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.fainancial</groupId>
+		<artifactId>financial-core-services</artifactId>
+		<version>1.0.0</version>
 	</parent>
-	<groupId>com.fainancial</groupId>
+
 	<artifactId>KnowledgeBuilderService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>KnowledgeBuilderService</name>
@@ -59,6 +58,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring-starter.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fainancial</groupId>
+			<artifactId>CommonModuleService</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 <!--		To be enabled with required bean definition, requires a bean of type - EmbeddingModel  -->
 <!--		<dependency>-->
