--- a/WhiteListService/pom.xml
+++ b/WhiteListService/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.fainancial</groupId>
+		<artifactId>financial-core-services</artifactId>
+		<version>1.0.0</version>
 	</parent>
 	<groupId>com.fainancial</groupId>
 	<artifactId>WhiteListService</artifactId>
