Add WhitelistService: Please read note.md file under WhitelistService folder || Still need some changes || Pushing for review.

--- a/WhiteListService/src/main/resources/application.properties
+++ b/WhiteListService/src/main/resources/application.properties
@@ -1,1 +1,34 @@
-spring.application.name=UploadService
+# Application Configuration
+spring.application.name=whitelist-service
+server.port=8082
+
+# MongoDB Configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=fainancial_whitelist
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# AWS S3 Configuration
+aws.s3.region=us-east-1
+aws.s3.bucket-name=fainancial-uploads
+# Set AWS region via environment variable to fix the error
+AWS_REGION=us-east-1
+
+# Logging Configuration
+logging.level.com.fainancial.WhitelistService=DEBUG
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.com.amazonaws=WARN
+
+# Spring AI Configuration (optional tuning)
+spring.ai.retry.max-attempts=3
+spring.ai.retry.backoff.initial-interval=1000ms
+
+# File Processing Configuration
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
